--- a/src/pages/empleo/[id].astro
+++ b/src/pages/empleo/[id].astro
@@ -8,7 +8,7 @@ const { id } = Astro.params;
 // Función para obtener los datos del blog desde el servidor
 async function searchData() {
     try {
-        const response = await fetch(`http://localhost:3000/api/blog/${id}`);
+        const response = await fetch(`https://jobs-server-production.up.railway.app/api/blog/${id}`);
         if (!response.ok) {
             throw new Error("Blog no encontrado");
         }
