--- a/src/components/routes/trabajo/PageTrabajo.astro
+++ b/src/components/routes/trabajo/PageTrabajo.astro
@@ -98,7 +98,7 @@ const html = converter.makeHtml(markdown);
                         <tr>
                             <td class="border-b border-gray-700 px-6 py-3">Profesión</td>
                             <td class="border-b border-gray-700 px-6 py-3"
-                                >{blog.proffesion}</td
+                                >{blog.jobDetails.proffesion}</td
                             >
                         </tr>
                         <tr>
@@ -204,7 +204,7 @@ const html = converter.makeHtml(markdown);
                     <tr>
                         <td class="border-b border-gray-700 px-6 py-3">Profesión</td>
                         <td class="border-b border-gray-700 px-6 py-3"
-                            >{blog.proffesion}</td
+                            >{blog.jobDetails.proffesion}</td
                         >
                     </tr>
                     <tr>
