--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import PageIndex from "../components/routes/index/PageIndex.astro";
 ---
 
-<Layout title="Cumbre">
+<Layout title="">
 	<main class="flex w-full">
 		<Header />
 		<div class="p-3 pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6">
