--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,8 @@ const { title } = Astro.props;
 				transition: 0.3s;
 			}
 		</style>
+		<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	</head>
 	<body class="bg-gray-950 text-white lg:flex">
 		<slot />
