Cambios en la interfaz de categorias

--- a/src/components/routes/buscar/Categorias.astro
+++ b/src/components/routes/buscar/Categorias.astro
@@ -1,3 +1,3 @@
-<ul class="grid grid-cols-2 gap-2" id="categoriesList">
+<ul class="grid grid-cols-1 gap-2 lg:grid-cols-2" id="categoriesList">
     <!-- Las categorías serán llenadas dinámicamente por jQuery -->
 </ul>
