Codigo de / actualizado, lista de ultimos empleos

--- a/src/components/routes/buscar/Resultados.astro
+++ b/src/components/routes/buscar/Resultados.astro
@@ -2,7 +2,7 @@
     <div class="flex justify-between items-center mb-3">
         <h2 class="font-bold text-xl">Resultados</h2>
         <button id="closeResults">
-            <img class="w-[30px]" src="/img/close.svg" alt="">
+            <img class="w-[30px]" src="/img/close.svg" alt="Icon Close">
         </button>
     </div>
     <ul id="resultList"></ul>
