--- a/src/components/HeaderMobile.astro
+++ b/src/components/HeaderMobile.astro
@@ -11,14 +11,14 @@ const { title } = Astro.props
         <img
             class="w-[40px]"
             src="https://th.bing.com/th/id/R.70ecfdd862bdc3fdbf5715085812f49e?rik=fDJPk4oWTEisvw&pid=ImgRaw&r=0"
-            alt=""
+            alt="Logo Cumbre"
         />
     </div>
     <h1 class="text-lg">
         <strong>{title}</strong>
     </h1>
     <div class="flex flex-grow justify-end basis-0">
-        <a href="">
+        <a href="/ayuda">
             <button class="bg-red-500 py-2 px-4 rounded-xl">Ayuda</button>
         </a>
     </div>
