--- a/src/components/HeaderMobile.astro
+++ b/src/components/HeaderMobile.astro
@@ -14,9 +14,9 @@ const { title } = Astro.props
             alt="Logo Cumbre"
         />
     </div>
-    <h1 class="text-lg">
+    <span class="text-lg">
         <strong>{title}</strong>
-    </h1>
+    </span>
     <div class="flex flex-grow justify-end basis-0">
         <a href="/ayuda">
             <button class="bg-red-500 py-2 px-4 rounded-xl">Ayuda</button>
