--- a/src/components/routes/buscar/Resultados.astro
+++ b/src/components/routes/buscar/Resultados.astro
@@ -1,6 +1,6 @@
 <div id="resultsContainer" style="display:none;">
     <div class="flex justify-between items-center mb-3">
-        <h2 class="font-bold text-xl">Resultados</h2>
+        <span class="font-bold text-xl">Resultados</span>
         <button id="closeResults">
             <img class="w-[30px]" src="/img/close.svg" alt="Icon Close">
         </button>
