--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@
                 alt="Logo Cumbre"
                 class="w-[40px]"
             />
-            <h1 class="text-xl ml-3">
+            <span class="text-xl ml-3">
                 <strong>Facebook</strong>
-            </h1>
+            </span>
         </li>
     </a>
     <ul class="flex justify-around items-center lg:flex-col">
