Meta description corregida con Astro.props

--- a/src/pages/buscar.astro
+++ b/src/pages/buscar.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import PageBuscar from "../components/routes/buscar/PageBuscar.astro";
 ---
 
-<Layout title="Buscar |">
+<Layout title="Buscar |" description="Buscador de empleos en Cumbre">
 	<main class="flex w-full">
 		<Header />
 		<div class="p-3 w-full pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6">
