--- a/src/pages/empleo/[id].astro
+++ b/src/pages/empleo/[id].astro
@@ -24,11 +24,12 @@ async function searchData() {
 const blog = await searchData();
 
 let title = `Trabaja como: ${blog.title} |`
+let metaDescription = `Consigue trabajo en ${blog.location} con la empresa ${blog.company}`
 ---
 
 {
     blog ? (
-        <Layout title={title}>
+        <Layout title={title} description={metaDescription}>
             <main class="flex w-full">
                 <Header />
                 <div class="w-full p-3 pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6">
