--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,10 @@
 interface Props {
 	title: string;
 	description: string;
+	canonicalUrl: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, canonicalUrl } = Astro.props;
 ---
 
 <!doctype html>
@@ -21,6 +22,7 @@ const { title, description } = Astro.props;
 				transition: 0.3s;
 			}
 		</style>
+		<link rel="canonical" href={canonicalUrl || "https://cumbre.icu"} />
 		<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	</head>
