--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import PageIndex from "../components/routes/index/PageIndex.astro";
 <Layout title="Encuentra tu empleo |" description="Página principal de Cumbre", canonicalUrl="https://cumbre.icu">
 	<main class="flex w-full">
 		<Header />
+		<h1 class="hidden">Inicio</h1>
 		<div class="p-3 pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6">
 			<PageIndex />
 		</div>
