H1, H2 corregido en /buscar

--- a/src/pages/buscar.astro
+++ b/src/pages/buscar.astro
@@ -7,6 +7,8 @@ import PageBuscar from "../components/routes/buscar/PageBuscar.astro";
 <Layout title="Buscar |" description="Buscador de empleos en Cumbre", canonicalUrl="https://cumbre.icu/buscar">
 	<main class="flex w-full">
 		<Header />
+		<h1 class="hidden">Buscar</h1>
+		<h2 class="hidden">Buscar empleos en Cumbre</h2>
 		<div class="p-3 w-full pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6">
 			<PageBuscar />
 		</div>
