Logo y Favicon actualizados

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,13 +7,10 @@
             title="Logo de Cumbre"
         >
             <img
-                src="https://th.bing.com/th/id/R.70ecfdd862bdc3fdbf5715085812f49e?rik=fDJPk4oWTEisvw&pid=ImgRaw&r=0"
+                src="/img/cumbre_logo.png"
                 alt="Logo Cumbre"
-                class="w-[40px]"
+                class="w-[150px]"
             />
-            <span class="text-xl ml-3">
-                <strong>Facebook</strong>
-            </span>
         </li>
     </a>
     <ul class="flex justify-around items-center lg:flex-col">
