--- a/src/components/HeaderMobile.astro
+++ b/src/components/HeaderMobile.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props
     <div class="flex flex-grow basis-0 lg:hidden">
         <img
             class="w-[40px]"
-            src="https://th.bing.com/th/id/R.70ecfdd862bdc3fdbf5715085812f49e?rik=fDJPk4oWTEisvw&pid=ImgRaw&r=0"
+            src="/img/cumbre_icon-logo.svg"
             alt="Logo Cumbre"
         />
     </div>
