--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title, description, canonicalUrl } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={description || "Descripción por defecto"} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} Cumbre</title>
 		<style>
