/chat comentada por ahora

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,7 @@
                 <span class="mt-[3px] lg:ml-2"> Buscar </span>
             </a>
         </li>
-        <li class="lg:w-full">
+        <!-- <li class="lg:w-full">
             <a
                 href="/chat"
                 class="flex flex-col items-center lg:flex-row lg:w-full lg:p-2 lg:px-5 lg:rounded-xl"
@@ -43,6 +43,6 @@
                 <img src="/img/chatNoClick.svg" alt="Icon Chat" />
                 <span class="mt-[3px] lg:ml-2"> Chat </span>
             </a>
-        </li>
+        </li> -->
     </ul>
 </header>
