Añadiendo comprobaciones de Google Analiticas

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,20 @@ const { title, description, canonicalUrl } = Astro.props;
 <!doctype html>
 <html lang="es">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-QG3J5H2MZW"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-QG3J5H2MZW");
+		</script>
 		<!-- Google Tag Manager -->
 		<script>
 			(function (w, d, s, l, i) {
