Añadiendo comprobaciones de Google Adsense

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,11 @@ const { title, description, canonicalUrl } = Astro.props;
 <!doctype html>
 <html lang="es">
 	<head>
+		<!-- Google Adsense -->
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4492898550156535"
+			crossorigin="anonymous"></script>
 		<!-- Google tag (gtag.js) -->
 		<script
 			async
