--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -93,7 +93,7 @@
     </script>
 </section>
 
-<section>
+<section class="my-5">
     <h2 class="font-bold text-xl mb-2">¿Deseas contactarnos?</h2>
     <h3 class="font-semibold">Sólo atenderemos solicitudes sobre:</h3>
     <ul class="text-sm my-5">
