--- a/src/components/routes/buscar/PageBuscar.astro
+++ b/src/components/routes/buscar/PageBuscar.astro
@@ -8,7 +8,7 @@ import Resultados from "./Resultados.astro";
 <HeaderMobile title="Buscar" />
 <div class="mt-6 w-full">
     <Buscador />
-    <Categorias />
+    <Categorias id="categoriesList" />
     <Resultados />
 </div>
 
