--- a/src/components/routes/index/Categorias.astro
+++ b/src/components/routes/index/Categorias.astro
@@ -7,7 +7,7 @@
         border: 2px solid rgb(103, 103, 103);
     }
 </style>
-<ul class="grid grid-cols-2 gap-2 lg:grid-cols-4">
+<ul class="grid grid-cols-2 gap-2 lg:grid-cols-4 w-full">
     <li class="categoria-grid">Logística</li>
     <li class="categoria-grid">Tecnología</li>
     <li class="categoria-grid">Marketing</li>
