--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ const { title, description, canonicalUrl } = Astro.props;
 		<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	</head>
-	<body class="bg-gray-950 text-white lg:flex">
+	<body class="bg-gray-950 text-white lg:flex w-full">
 		<!-- Google Tag Manager (noscript) -->
 		<noscript
 			><iframe
